# open-e2c-dictionary

./: AGENTS.md  README.md  pyproject.toml
.serena/: project.yml
.serena/memories/: wiktionary_cli_refactor.md
src/open_dictionary/: __init__.py  cli.py  importer.py  workflow.py
src/open_dictionary/db/: access.py  cleaner.py  importer.py  mark_commonness.py  sqlite_manager.py
src/open_dictionary/llm/: define.py  define_enricher.py  llm_client.py  regular_check.py
src/open_dictionary/utils/: env_loader.py
src/open_dictionary/wikitionary/: downloader.py  extract.py  filter.py  pipeline.py  pre_process.py  progress.py  transform.py
