[project]
name = "open-dictionary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ahpx", email = "AHpx@yandex.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "openai>=2.6.1",
    "psycopg[binary]>=3.2,<4",
    "python-dotenv>=1.0,<2",
    "wordfreq>=3.1.1",
]

[project.scripts]
open-dictionary = "open_dictionary:main"

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"
