[project]
name = "open-dictionary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ahpx", email = "AHpx@yandex.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
open-dictionary = "open_dictionary:main"

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"
